clusters/main/kubernetes/apps/authelia/app/referencegrants.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authelia
  namespace: authelia
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: SecurityPolicy
      namespace: filebrowser
  to:
    - group: ""
      kind: Service
