clusters/main/kubernetes/apps/authelia/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    gethomepage.dev/description: Authelia is a Single Sign-On Multi-Factor portal for web apps
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Default
    gethomepage.dev/href: https://auth.${DOMAIN_0}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/authelia.webp
    gethomepage.dev/instance: internal
    gethomepage.dev/name: Authelia

    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]

spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "auth.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: authelia
          port: 9091
